Cropped thresholding images. Moved logo to images folder. Work done on preprocessing part. Need some edge images.

--- a/Final-Report/acknowledgements.tex
+++ b/Final-Report/acknowledgements.tex
@@ -2,7 +2,7 @@
 % Your supervisor will obviously be pleased to be acknowledged as he or she will have invested quite a lot of time overseeing your progress.
 \chapter*{Acknowledgements}
 
-Special thanks to \textbf{Bernhard Kainz} whose guidance during this project was invaluable.
+Special thanks to \textbf{Bernhard Kainz} whose guidance was invaluable.
 
 Thanks also to everybody who gave their time to help with the evaluation:
 
