--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -63,14 +63,14 @@
 
 \titleformat{\subsection}[display]
    	% Format
-   	{\large\bfseries}
+   	{\small\bfseries}
    	% Label
    	{}
    	%Separation
    	{-2em}
    	% Before
     {
-    	\hspace*{1em} \thesubsection \hspace*{0.25em} - \spacedallcaps
+    	\hspace*{1em} \spacedallcaps
     }
     % After
     []
@@ -78,6 +78,8 @@
 
 % Shiny Pictures
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 
 % Font
 \usepackage{fontspec}
