--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -1,4 +1,9 @@
-\chapter{Background}\section{Medical Imaging}
+\chapter{Background}
+
+% ------------------------- %
+% ---- MEDICAL IMAGING ---- %
+% ------------------------- %
+\section{Medical Imaging}\label{background:medicalimaging}
 The field of medical imaging came into existence with the discovery of x-rays in 1895 by Wilhelm R\"{o}ntgen\cite{rontgen}. This meant that for the first time it was possible to peek into the human anatomy without having to physically open it up. This revolution came at a cost however as at the time the dangers of high doses of radiation were not understood and many of the pioneers died as a result of exposure\cite{xraydeath}.
 
 Radiology, the use of ionizing radiation to image objects, was greatly refined over the years; contrast agents were developed which made fields like angiography (imaging of blood vessels) possible\cite{infinityhistory} and the doses used were refined to dramatically decrease the associated risks. X-rays have been used successfully in medical imaging ever since and in the 70s the invention of the CT scanner allowed them to be used to produce 3D images of the body.
@@ -9,8 +14,11 @@ MRI can be used to create anatomical images by examining the varying water conte
 
 As with all medical imaging techniques the benefits and risks need to be weighed up before a scan is performed. When imaging fetuses the risks are higher than normal and so in general CT scans tend not to be used wherever possible. MRI however, like US (ultrasound), is not associated with known adverse fetal effects.\cite{pregnancyimagingguidelines}
 
+% ------------------------- %
+% ---------- MRI ---------- %
+% ------------------------- %
 \newpage
-\section{MRI (Magnetic Resonance Imaging)}\cite{howmriworks}
+\section{MRI (Magnetic Resonance Imaging)}\label{background:mri}\cite{howmriworks}
 
 MRI uses a strong magnetic field and radio waves to produce images of the body. MRI can be used to produce 2D, 3D and even 4D images and has the advantage that it doesn’t use any ionizing radiation during the scanning process.
 
@@ -22,20 +30,22 @@ When a radio wave is then applied some of the lower energy protons flip to becom
 
 The resonant frequency of radio wave that is required to excite the protons depends on the strength of the magnetic field. This property allows an area to be scanned by applying a gradient magnetic field and varying the radio frequency.
 
-There are a number of different variations of MRI. T1-weighted scans are best for visualising fat, calcification, hemorrhage, thyroid, liver and bone marrow whereas T2-weighted scans accentuate water content.
+There are a number of different variations of MRI. T1-weighted scans are best for visualizing fat, calcification, hemorrhage, thyroid, liver and bone marrow whereas T2-weighted scans accentuate water content.
 There are also a number of different ways of acquiring the scan. SSFSE (Single Shot Fast Spin Echo) works by acquiring each slice of the image in sequence whereas 2DGRE (Gradient Echo) acquires all of the slices simultaneously.
 
 If the contrast that can be achieved with MRI is insufficient for the imaging then a contrast agent, such as gadolinium, can be administered to enhance the quality of the image.
 
-\subsection{Fetal MRI}\cite{fetalmri}
+\subsection{Fetal MRI}\label{background:fetalmri}\cite{fetalmri}
 
 Since MRI, like US, is a non-invasive procedure that doesn’t use ionizing radiation it is ideal for use in fetal imaging. While US remains the most common imaging modality used during pregnancy MRI has a number of advantages; in particular it has better contrast in soft tissue which allows individual organs to be better differentiated. US however remains the cheaper of the two and is unlikely to be replaced as the main fetal imaging tool in the near future.
 
 There are no known side effects associated with using MRI, however it is currently recommended to wait until the 17th or 18th WG (week of gestation) before performing MRI. This is partly a precautionary measure but also before then the size of the fetus and amount of movement limits the usefulness of the scan.
 
+% -------------------------- %
+% ---- Super Resolution ---- %
+% -------------------------- %
 \newpage
-\section{Super Resolution}
-\cite{superresolution1}\cite{superresolution2}
+\section{Super Resolution}\label{background:superresolution}\cite{superresolution1}\cite{superresolution2}
 One of the challenges with using MRI for fetal imaging is the resolution that is achievable with current scanners. A typical slice thickness when performing a scan on a fetal brain for example is 3mm, which is set to provide a good balance between resolution and noise. Comparing this to the brain, which may only be 5cm, limits the diagnostic potential.
 
 Super resolution is a technique that is designed to address this issue. The idea behind super resolution is to construct a higher resolution image by combining information from multiple lower resolution images. A similar approach is used in stereoscopic 3D where the information from two images taken from different perspectives are combined to create one 3D image.
@@ -99,8 +109,11 @@ These matrices can be combined to give us this result, without loss of generalit
 
 There are a number of different processes that are used to try and reverse this process, however this detail is sufficient to understand the kind of errors or uncertainties that can arise when reconstructing MRI images.
 
+% ------------------------- %
+% ------ Uncertainty ------ %
+% ------------------------- %
 \newpage
-\section{Uncertainty in Super Resolution}
+\section{Uncertainty in Super Resolution}\label{background:uncertainty}
 Three main types of uncertainty have been considered:
 
 \begin{enumerate}
@@ -113,8 +126,11 @@ Having three separate 'channels' of uncertainty makes visualizing it more diffic
 
 An aggregation of all three will be able to give a useful overview of the situation, however being able to isolate a single type of uncertainty is important as it gives the viewer an idea of what caused the reconstruction issues.
 
+% ------------------------- %
+% ------- SVD / PCA ------- %
+% ------------------------- %
 \newpage
-\section{Singular Value Decomposition and Principal Component Analysis}
+\section{Singular Value Decomposition and Principal Component Analysis}\label{background:svdpca}
 SVD breaks down a matrix, $A$, into three components: $U$, $D$ and $V$.
 
 \begin{align}
@@ -165,8 +181,11 @@ We see that the eigenvalues are just the square root of the diagonal we get from
 
 Principal component analysis, or a slightly modified version of it, may be applicable when suggesting the next scan plane based on the uncertainty information.
 
+% ------------------------ %
+% -------- RANSAC -------- %
+% ------------------------ %
 \newpage
-\section{RANSAC}
+\section{RANSAC}\label{background:ransac}
 RANSAC, which stands for Random Sample Consensus, is a technique for estimating model parameters given some sample data.
 
 Consider the task of trying to fit a line to some data which contains both correct points (inliers) and noisy data (outliers). The problem with simply minimizing the sum of squared errors to all of the points is that the outliers will distort the result such that the inliers are not perfectly described by the data. Figure~\ref{fig:ransac} illustrates this task.
@@ -191,16 +210,19 @@ A number of iterations are then performed and the winning iteration is the one w
 	\item iterations (how many times to perform the algorithm)
 \end{itemize}
 
+% -------------------------- %
+% ---- Volume Rendering ---- %
+% -------------------------- %
 \newpage
-\section{Direct Volume Rendering}
+\section{Direct Volume Rendering}\label{background:volumerendering}
 \cite{nvidia:volumerendering}
 MRI is tomographic imaging technique which means that the image is acquired in slices. The resulting scan is created by combining these slices to build a 3D volume. An MRI scan is often displayed in 2D by taking each slice and displaying it, however it is also possible to take all of the slices and view the scan in 3D. One technique for doing this is direct volume rendering.
 
-Direct volume rendering is a technique for visualising 3D volumetric data which does not generate any intermediate representation. The process uses ray tracing where rays are fired into the volume and properties of light, such as colour and opacity, are modelled to render the data.
+Direct volume rendering is a technique for visualizing 3D volumetric data which does not generate any intermediate representation. The process uses ray tracing where rays are fired into the volume and properties of light, such as colour and opacity, are modelled to render the data.
 
 Each ray of light (we have one per pixel) is sent into the volume and samples are taken at a regular interval. Each sample point may not exactly hit a voxel in the volume and so the value will be interpolated from the neighbouring points. Trilinear interpolation can be used but may introduce some visual artefacts in which case more complex interpolation (such as piecewise cubic polynomials) can be used.
 
-Each of these samples, which is just an intensity value, needs to be mapped to something that we can visualise. A transfer function is used to map these values to colour and transparency values. This transfer function can then be changed to highlight different features of our volume, for example we could make all values below a certain threshold completely transparent.
+Each of these samples, which is just an intensity value, needs to be mapped to something that we can visualize. A transfer function is used to map these values to colour and transparency values. This transfer function can then be changed to highlight different features of our volume, for example we could make all values below a certain threshold completely transparent.
 
 All of the samples along the ray are then combined to calculate the value of the pixel.
 
@@ -216,15 +238,18 @@ All of the samples along the ray are then combined to calculate the value of the
 
 NOTE: If the final opacity is greater than 0 then the colour is normalised (divided by $O$).
 
+% ---------------------------- %
+% ---- Surface Extraction ---- %
+% ---------------------------- %
 \newpage
-\section{Surface Extraction}
-Surface extraction is another technique that can be used to visualising volumetric data. Instead of visualising the data directly, as in direct volume rendering, the volume is processed to build a geometric representation which can then be rendered.
+\section{Surface Extraction}\label{background:surfaceextraction}
+Surface extraction is another technique that can be used to visualizing volumetric data. Instead of visualizing the data directly, as in direct volume rendering, the volume is processed to build a geometric representation which can then be rendered.
 
 This advantage of using surface extraction is that it is much cheaper computationally\cite{surfacevsvolumerendering}. There is an initial penalty where the volume data is processed to extract surfaces but once this has been completed the rendering of geometric primitives is something that can be done incredibly quickly by graphics hardware.
 
 A common surface extraction algorithm is marching cubes. This algorithm works by examining the intensities of neighbouring voxels to tell whether or not the surface passes between them by comparing the values to a threshold value. 
 
-The process is easier to visualise in 2D (marching squares), see Figure~\ref{fig:marching_squares}, but it can be simply extended to 3D.
+The process is easier to visualize in 2D (marching squares), see Figure~\ref{fig:marching_squares}, but it can be simply extended to 3D.
 
 \begin{figure}[h]
     \centering
@@ -235,22 +260,25 @@ The process is easier to visualise in 2D (marching squares), see Figure~\ref{fig
 
 The marching cubes algorithm generates as a result a mesh of triangles which can be reduced to the desired resolution by applying some mesh decimation techniques. Once this has been done the volume can be rendered very efficiently using standard rendering techniques.
 
-There are some constraints associated with using surface extraction for volume visualisation. Firstly the number of primitives required to represent certain volumes may be prohibitively high. As an extreme you can imagine trying to extract surfaces from the volumetric representation of a dust cloud; in this case it would not be practical to do so and in other situations an accuracy/efficiency trade off must be found. Also, there is a certain amount of information loss with this technique, importantly the intensity values are lost.
+There are some constraints associated with using surface extraction for volume visualization. Firstly the number of primitives required to represent certain volumes may be prohibitively high. As an extreme you can imagine trying to extract surfaces from the volumetric representation of a dust cloud; in this case it would not be practical to do so and in other situations an accuracy/efficiency trade off must be found. Also, there is a certain amount of information loss with this technique, importantly the intensity values are lost.
 
+% ----------------------------------- %
+% ---- Uncertainty Visualization ---- %
+% ----------------------------------- %
 \newpage
-\section{Uncertainty Visualisation}
+\section{Uncertainty Visualization}\label{background:uncertaintyvisualization}
 \cite{uncertaintyoverview}
-Uncertainty visualisation in a general sense tackles the problem of trying to represent the ambiguity or uncertainty in a some data or a model when visualising it.
+Uncertainty visualization in a general sense tackles the problem of trying to represent the ambiguity or uncertainty in a some data or a model when visualizing it.
 
-Most data visualisation techniques implicitly assume that all of the data being used is perfect and because of this create visualisations that are misleading or appear to represent with great precision a model when in fact the underlying data cannot be that sure.
+Most data visualization techniques implicitly assume that all of the data being used is perfect and because of this create visualizations that are misleading or appear to represent with great precision a model when in fact the underlying data cannot be that sure.
 
-One of the reason that a lot of visualisations leave this kind of information out is that it can be quite to visualise the uncertainty. When creating a visualisation there is an inherent restriction on the dimensions that you can exploit to represent information.
+One of the reason that a lot of visualizations leave this kind of information out is that it can be quite to visualize the uncertainty. When creating a visualization there is an inherent restriction on the dimensions that you can exploit to represent information.
 
-Consider the general problem of creating a visualisation from an n-dimensional dataset and suppose that we are creating a 3D visualisation. In this case we need to somehow map each n-dimensional data point to a ‘dimension’ in our visualisation. The dimensions we can control are space (x, y, z), time and colour (RGB/HSV). The art of data visualisation is to find an intuitive mapping to these and to creatively reuse these dimensions to illustrate different features.
+Consider the general problem of creating a visualization from an n-dimensional dataset and suppose that we are creating a 3D visualization. In this case we need to somehow map each n-dimensional data point to a ‘dimension’ in our visualization. The dimensions we can control are space (x, y, z), time and colour (RGB/HSV). The art of data visualization is to find an intuitive mapping to these and to creatively reuse these dimensions to illustrate different features.
 
-The issue when it comes to uncertainty visualisation is that most of these dimensions have already been used up with the data itself and so finding intuitive representations for uncertainty is difficult.
+The issue when it comes to uncertainty visualization is that most of these dimensions have already been used up with the data itself and so finding intuitive representations for uncertainty is difficult.
 
-To get an idea of what is possible with visualisation techniques here are some examples that have been applied successfully in the past.
+To get an idea of what is possible with visualization techniques here are some examples that have been applied successfully in the past.
 
 \begin{figure}[h]
     \centering
@@ -259,7 +287,7 @@ To get an idea of what is possible with visualisation techniques here are some e
     \label{fig:error_bars}
 \end{figure}
 
-Error bars are possibly the simplest form of uncertainty visualisation possible and are commonly found on graphs. They make use of one spatial dimension. An extension of this technique is the box and whisker plot which adds some idea of variance and range. An example of both is shown in Figure~\ref{fig:error_bars}.
+Error bars are possibly the simplest form of uncertainty visualization possible and are commonly found on graphs. They make use of one spatial dimension. An extension of this technique is the box and whisker plot which adds some idea of variance and range. An example of both is shown in Figure~\ref{fig:error_bars}.
 
 \begin{figure}[h]
     \centering
@@ -268,9 +296,9 @@ Error bars are possibly the simplest form of uncertainty visualisation possible 
     \label{fig:heatmap}
 \end{figure}
 
-Colour can be very effective at communicating information. A heatmap uses a range of colours to represent intensity data in a certain range. Transparency can also be used though care must be taken to not over complicate the visualisation. An example of using both colour and transparency is shown in Figure~\ref{fig:heatmap}.
+Colour can be very effective at communicating information. A heatmap uses a range of colours to represent intensity data in a certain range. Transparency can also be used though care must be taken to not over complicate the visualization. An example of using both colour and transparency is shown in Figure~\ref{fig:heatmap}.
 
-Time is a useful dimension to exploit but is more suited to some visualisations than others. When combined with a different dimension, such as colour, an animation can be produced that can draw the viewers attention.
+Time is a useful dimension to exploit but is more suited to some visualizations than others. When combined with a different dimension, such as colour, an animation can be produced that can draw the viewers attention.
 
 In particular a team at the Vienna University of Technology have written a paper on attractive flicker which is designed to draw the viewers attention to a particular point in a cluttered scene\cite{attractiveflicker}. Figure~\ref{fig:error_bars} illustrates this idea.
 
@@ -283,11 +311,14 @@ In particular a team at the Vienna University of Technology have written a paper
 
 This technique could be useful for illustrating the area of greatest uncertainty or highlighting the scan plane.
 
-When visualising uncertainty in particular you must consider which extreme you would like to draw attention to. A lot of uncertainty visualisations draw larger attention to high uncertainty areas, for example brighter colours on a heatmap or larger error bars, but it may be the case that the viewer is interested in areas of high certainty as this is what they can draw conclusions from.
+When visualizing uncertainty in particular you must consider which extreme you would like to draw attention to. A lot of uncertainty visualizations draw larger attention to high uncertainty areas, for example brighter colours on a heatmap or larger error bars, but it may be the case that the viewer is interested in areas of high certainty as this is what they can draw conclusions from.
 
+% ------------------------- %
+% ------- Labelling ------- %
+% ------------------------- %
 \newpage
-\section{Labelling - didn't use this... is it worth mentioning...}
-One part of the project that there wasn't time to explore was Another aspect of this project will be proposing (and visualising) the next scan plane. This, and potentially other parts of the project, will involve labelling the data in some way. Work on choosing a good labelling system has been done previously and there are a number of different approaches that can be taken\cite{labelling}.
+\section{Labelling - didn't use this... is it worth mentioning...}\label{background:labelling}
+One part of the project that there wasn't time to explore was Another aspect of this project will be proposing (and visualizing) the next scan plane. This, and potentially other parts of the project, will involve labelling the data in some way. Work on choosing a good labelling system has been done previously and there are a number of different approaches that can be taken\cite{labelling}.
 
 \begin{figure}[h]
     \centering
