--- a/Final-Report/title.tex
+++ b/Final-Report/title.tex
@@ -11,7 +11,7 @@
 
 \begin{figure}
   \begin{flushleft}% or better \raggedleft see comments below
-	\includegraphics[height=1.5cm]{logo.eps}\\[2cm] % Include a department/university logo - this will require the graphicx package
+	\includegraphics[height=1.5cm]{images/logo.eps}\\[2cm] % Include a department/university logo - this will require the graphicx package
   \end{flushleft}
 \end{figure}
 
