--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -35,7 +35,7 @@
    	% Label
    	{}
    	%Separation
-   	{-10pt}
+   	{-30pt}
    	% Before
     {
     	\titlerule\vspace*{0.4\baselineskip}
@@ -55,7 +55,7 @@
    	{-2em}
    	% Before
     {
-    	\hspace*{1em} \thesection \hspace*{0.25em} - \spacedallcaps
+    	\thesection \hspace*{0.25em} - \spacedallcaps
     }
     % After
     []
